--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w",
-    "test": "node -e \"console.log('no tests yet')\"",
+    "test": "jest",
     "prepublishOnly": "npm run build && npm test"
   },
   "keywords": [
@@ -31,5 +31,18 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/imikailoby/sats.git"
+  },
+  "dependencies": {
+    "bip32": "^5.0.0-rc.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^6.1.7",
+    "tiny-secp256k1": "^2.2.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.2.1",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2"
   }
 }
