--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bip32": "^5.0.0-rc.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.7",
+    "ecpair": "^3.0.0",
     "tiny-secp256k1": "^2.2.4"
   },
   "devDependencies": {
