--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w",
     "test": "jest",
     "prepublishOnly": "npm run build && npm test"
   },
@@ -48,5 +47,8 @@
     "jest": "^30.0.5",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
